--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,8 @@ readme = "README.md"
 python = "^3.11"
 streamlit = "^1.38.0"
 langchain-groq = "^0.2.0"
+langchain-huggingface = "^0.1.0"
+langchain-community = "^0.3.1"
 
 
 [build-system]
