--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ streamlit = "^1.38.0"
 langchain-groq = "^0.2.0"
 langchain-huggingface = "^0.1.0"
 langchain-community = "^0.3.1"
+streamlit-authenticator = "^0.3.3"
 
 
 [build-system]
