--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ langchain-groq = "^0.2.0"
 langchain-huggingface = "^0.1.0"
 langchain-community = "^0.3.1"
 streamlit-authenticator = "^0.3.3"
+pyyaml = "^6.0.2"
 
 
 [build-system]
