--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -21,7 +21,7 @@ jobs:
       - name: Install dependencies with Poetry
         run: |
           python -m pip install --upgrade pip
-          pip install poetry streamlit
+          pip install poetry streamlit pyyaml
           poetry install
 
       
