--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -22,7 +22,7 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install poetry streamlit pyyaml
-          poetry install
+          poetry install --no-root
 
       
       - name: Deploy to Streamlit
