--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -12,7 +12,7 @@
             "envFile": "${workspaceFolder}/.env",
             "args": [
                 "run",
-                "app.py",
+                "streamlit_app.py",
             ],
         }
     ]
