--- a/.github/workflows/populate_leaderboard.yml
+++ b/.github/workflows/populate_leaderboard.yml
@@ -4,7 +4,7 @@ on:
     workflow_dispatch:
     schedule:
         # https://crontab.guru/
-        - cron: "0 */6 * * *" # At 00:00 on every 3rd day-of-month.
+        - cron: "0 */6 * * *"
 
 jobs:
   run-python-script:
